<resources>
    <string name="app_name">林洁宏的计算器</string>
    <string name="action_settings">Settings</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="factorial">X!</string>
</resources>
