<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dip">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="120dip"
        android:gravity="right"
        android:orientation="vertical"
        android:padding="12dip"
        android:background="#BFBFBF">

        <!-- center_vertical|right靠右垂直居中 -->
        <TextView
            android:id="@+id/show_result_tv"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:textColor="#1B1D20"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/show_input_tv"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:textColor="#1B1D20"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_marginTop="64dip"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/c_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textColor="#CC0000"
                android:text="C"/>
            <Button
                android:id="@+id/del_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textColor="#FF6600"
                android:text="DEL"/>
            <Button
                android:id="@+id/divide_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textColor="#FF6600"
                android:text="@string/divide"
                />
            <Button
                android:id="@+id/multiply_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textColor="#FF6600"
                android:text="@string/multiply"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/seven" />
            <Button
                android:id="@+id/eight_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/eight"/>
            <Button
                android:id="@+id/nine_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/nine" />
            <Button
                android:id="@+id/sub_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textColor="#FF6600"
                android:text="@string/sub"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/four" />
            <Button
                android:id="@+id/five_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/five" />
            <Button
                android:id="@+id/six_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/six" />
            <Button
                android:id="@+id/add_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textColor="#FF6600"
                android:text="@string/add" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:id="@+id/one_btn"
                            android:text="@string/one"/>
                        <Button
                            android:id="@+id/two_btn"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:text="@string/two"/>
                        <Button
                            android:id="@+id/three_btn"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:text="@string/three"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/zero_btn"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:text="@string/zero" />
                        <Button
                            android:id="@+id/factorial_btn"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:text="@string/factorial" />
                        <Button
                            android:id="@+id/point_btn"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:text="@string/point"/>

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/equal_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:textColor="#CC0000"
                    android:text="@string/equal" />

            </LinearLayout>
        </LinearLayout>

</LinearLayout>
